more links fixes

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         </p>
                     </div>
                     <div class="construction__buttons">
-                        <button type="button" class="transparent__button"><a href="/about.html">LEARN MORE ABOUT US</a></button>
+                        <button type="button" class="transparent__button"><a href="about.html">LEARN MORE ABOUT US</a></button>
                         <button type="button" class="orange__button">SUBMIT REQUEST</button>
                     </div>
                 </div>
@@ -181,7 +181,7 @@
                     </div>
                     <div class="services__view">
                         <h3>Learn more about our services</h3>
-                        <button class="orange__button"><a href="/services.html">VIEW SERVICES</a></button>
+                        <button class="orange__button"><a href="services.html">VIEW SERVICES</a></button>
                     </div>
                 </div>
             </div>
@@ -215,14 +215,14 @@
                                         <div class="item__box">
                                             <h4 class="item__title">Red Finger Building</h4>
                                             <p class="item__text">Business Centers</p>
-                                            <a href="/cottage.html"><button class="orange__button">VIEW PROJECT</button></a>
+                                            <a href="cottage.html"><button class="orange__button">VIEW PROJECT</button></a>
                                         </div>
                                     </div>
                                     <div class="projects__item-2">
                                         <div class="item__box">
                                             <h4 class="item__title">Cubes Building</h4>
                                             <p class="item__text">Business Centers</p>
-                                            <a href="/cottage.html">
+                                            <a href="cottage.html">
                                                 <button class="orange__button">VIEW PROJECT</button>
                                             </a>
                                         </div>
@@ -231,7 +231,7 @@
                                         <div class="item__box">
                                             <h4 class="item__title">The Pencil Building</h4>
                                             <p class="item__text">Stores & Malls</p>
-                                            <a href="/cottage.html">
+                                            <a href="cottage.html">
                                                 <button class="orange__button">VIEW PROJECT</button>
                                             </a>
                                         </div>
@@ -244,14 +244,14 @@
                                         <div class="item__box">
                                             <h4 class="item__title">Modern Cottage</h4>
                                             <p class="item__text">Private houses</p>
-                                            <a href="/cottage.html"><button class="orange__button">VIEW PROJECT</button></a>
+                                            <a href="cottage.html"><button class="orange__button">VIEW PROJECT</button></a>
                                         </div>
                                     </div>
                                     <div class="projects__item-5">
                                         <div class="item__box">
                                             <h4 class="item__title">Luxury Beach House</h4>
                                             <p class="item__text">Private houses</p>
-                                            <a href="/cottage.html">
+                                            <a href="cottage.html">
                                                 <button class="orange__button">VIEW PROJECT</button>
                                             </a>
                                         </div>
@@ -260,7 +260,7 @@
                                         <div class="item__box">
                                             <h4 class="item__title">Modern Double Bedroom</h4>
                                             <p class="item__text">Apartments & flats</p>
-                                            <a href="/cottage.html">
+                                            <a href="cottage.html">
                                                 <button class="orange__button">VIEW PROJECT</button>
                                             </a>
                                         </div>
@@ -273,7 +273,7 @@
                                         <div class="item__box">
                                             <h4 class="item__title">Kids Bedroom With Decorations</h4>
                                             <p class="item__text">Apartments & flats</p>
-                                            <a href="/cottage.html">
+                                            <a href="cottage.html">
                                                 <button class="orange__button">VIEW PROJECT</button>
                                             </a>
                                         </div>
@@ -282,7 +282,7 @@
                                         <div class="item__box">
                                             <h4 class="item__title">Scandinavian Style Interior</h4>
                                             <p class="item__text">Private houses</p>
-                                            <a href="/cottage.html">
+                                            <a href="cottage.html">
                                                 <button class="orange__button">VIEW PROJECT</button>
                                             </a>
                                         </div>
@@ -291,7 +291,7 @@
                                         <div class="item__box">
                                             <h4 class="item__title">Brown and Gray Painted House</h4>
                                             <p class="item__text">Private houses</p>
-                                            <a href="/cottage.html">
+                                            <a href="cottage.html">
                                                 <button class="orange__button">VIEW PROJECT</button>
                                             </a>
                                         </div>
@@ -303,7 +303,7 @@
 
                     <div class="projects__view">
                         <h3 class="view__title">Explore all our works</h3>
-                        <button class="orange__button"><a href="/work.html">VIEW PROJECTS</a></button>
+                        <button class="orange__button"><a href="work.html">VIEW PROJECTS</a></button>
                     </div>
                 </div>
             </div>
@@ -370,11 +370,11 @@
                         <h2 class="facts__title">Recent news</h2>
                         <div class="facts__cards">
                             <div class="facts__item">
-                                <a href="/infrastructure.html">
+                                <a href="infrastructure.html">
                                     <img src="img/main/facts__card_2.jpg" alt="card image">
                                 </a>
                                 <div class="item__box">
-                                    <a href="/infrastructure.html">
+                                    <a href="infrastructure.html">
                                         <h5 class="item__title">How to Build Climate Change-Resilient Infrastructure</h5>
                                     </a>
                                     <div class="item__info">
@@ -396,11 +396,11 @@
                             </div>
                             <div class="news__divisor">
                                 <div class="facts__item-mini">
-                                    <a href="/infrastructure.html">
+                                    <a href="infrastructure.html">
                                         <img src="img/main/facts__card_1.jpg" alt="card image">
                                     </a>
                                     <div class="item__box">
-                                        <a href="/infrastructure.html">
+                                        <a href="infrastructure.html">
                                             <h5 class="item__title orange">How Construction Can Help Itself</h5>
                                         </a>
                                         <div class="item__info">
@@ -416,11 +416,11 @@
                                     </div>
                                 </div>
                                 <div class="facts__item-mini">
-                                    <a href="/infrastructure.html">
+                                    <a href="infrastructure.html">
                                         <img src="img/main/facts__card_3.jpg" alt="card image">
                                     </a>
                                     <div class="item__box">
-                                        <a href="/infrastructure.html">
+                                        <a href="infrastructure.html">
                                             <h5 class="item__title">Types of Flooring Materials</h5>
                                         </a>
                                         <div class="item__info">
@@ -439,7 +439,7 @@
                         </div>
                         <div class="news__view">
                             <h3 class="news__title">Explore all our news posts</h3>
-                            <a href="/news.html"><button class="orange__button">VIEW ALL NEWS</button></a>
+                            <a href="news.html"><button class="orange__button">VIEW ALL NEWS</button></a>
                         </div>
                     </div>
                 </div>
