--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                         </p>
                     </div>
                     <div class="bureau__video">
-                        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
+                        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">
                             <img src="img/main/large.svg" alt="play image">
                         </a>
                         <div class="bureau__circle">
@@ -353,7 +353,7 @@
                                 <p class="figures__text">Totally satisfied clients</p>
                             </li>
                             <li>
-                                <img src="img/main/circle-progress (1).png" alt="20 years of expperience">
+                                <img src="img/main/circle-progress (1).png" alt="20 years of experience">
                                 <p class="figures__text">Years of experience</p>
                             </li>
                             <li>
