--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                         </p>
                     </div>
                     <div class="bureau__video">
-                        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">
+                        <a class="youtube__link" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">
                             <img src="img/main/large.svg" alt="play image">
                         </a>
                         <div class="bureau__circle">
