--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
                         </p>
                     </div>
                     <div class="bureau__video">
-                        <a class="youtube__link" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">
-                            <img src="img/main/large.svg" alt="play image">
+                        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">
+                            <img class="youtube__link" src="img/main/large.svg" alt="play image">
                         </a>
                         <div class="bureau__circle">
                             <img src="img/main/off.svg" alt="sound off image">
