main page slider added

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <script src="js/projects_slider.js" defer></script>
+    <script src="js/createx__slider.js" defer></script>
     <title>Main page</title>
 </head>
 <body>
@@ -50,30 +51,112 @@
 
     <main>
         <section class="back">
-            <div class="container">
-                <div class="construction">
-                    <div class="construction__title">
-                        <h1>CREATE<span class="orange">X</span> CONSTRUCTION</h1>
+            <div class="slider">
+                <div class="slides">
+                    <input type="radio" name="r" id="r1" checked>
+                    <input type="radio" name="r" id="r2" >
+                    <input type="radio" name="r" id="r3" >
+                    <input type="radio" name="r" id="r4" >
+
+                    <div class="arrows">
+                        <div class="arrow__left" id="left__arrow">
+                            <img src="img/cottage/Left.png" alt="">
+                        </div>
+                        <div class="arrow__right" id="right__arrow">
+                            <img src="img/cottage/Right.png" alt="">
+                        </div>
                     </div>
-                    <div class="construction__text">
-                        <p>Cras ultrices leo vitae non viverra. Fringilla nisi 
-                            quisque consequat, dignissim vitae proin ipsum sed. 
-                            Pellentesque nec turpis purus eget pellentesque integer 
-                            ipsum elementum felis. 
-                        </p>
+
+                    <div class="slide s1">
+                        <div class="container">
+                            <div class="construction">
+                                <div class="construction__title">
+                                    <h1>CREATE<span class="orange">X</span> CONSTRUCTION</h1>
+                                </div>
+                                <div class="construction__text">
+                                    <p>Cras ultrices leo vitae non viverra. Fringilla nisi 
+                                        quisque consequat, dignissim vitae proin ipsum sed. 
+                                        Pellentesque nec turpis purus eget pellentesque integer 
+                                        ipsum elementum felis. 
+                                    </p>
+                                </div>
+                                <div class="construction__buttons">
+                                    <button type="button" class="transparent__button"><a href="about.html">LEARN MORE ABOUT US</a></button>
+                                    <button type="button" class="orange__button">SUBMIT REQUEST</button>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                    <div class="construction__buttons">
-                        <button type="button" class="transparent__button"><a href="about.html">LEARN MORE ABOUT US</a></button>
-                        <button type="button" class="orange__button">SUBMIT REQUEST</button>
+
+                    <div class="slide">
+                        <div class="container">
+                            <div class="construction">
+                                <div class="construction__title">
+                                    <h1>CREATE<span class="orange">X</span> CONSTRUCTION</h1>
+                                </div>
+                                <div class="construction__text">
+                                    <p>Cras ultrices leo vitae non viverra. Fringilla nisi 
+                                        quisque consequat, dignissim vitae proin ipsum sed. 
+                                        Pellentesque nec turpis purus eget pellentesque integer 
+                                        ipsum elementum felis. 
+                                    </p>
+                                </div>
+                                <div class="construction__buttons">
+                                    <button type="button" class="transparent__button"><a href="about.html">LEARN MORE ABOUT US</a></button>
+                                    <button type="button" class="orange__button">SUBMIT REQUEST</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="slide">
+                        <div class="container">
+                            <div class="construction">
+                                <div class="construction__title">
+                                    <h1>CREATE<span class="orange">X</span> CONSTRUCTION</h1>
+                                </div>
+                                <div class="construction__text">
+                                    <p>Cras ultrices leo vitae non viverra. Fringilla nisi 
+                                        quisque consequat, dignissim vitae proin ipsum sed. 
+                                        Pellentesque nec turpis purus eget pellentesque integer 
+                                        ipsum elementum felis. 
+                                    </p>
+                                </div>
+                                <div class="construction__buttons">
+                                    <button type="button" class="transparent__button"><a href="about.html">LEARN MORE ABOUT US</a></button>
+                                    <button type="button" class="orange__button">SUBMIT REQUEST</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="slide">
+                        <div class="container">
+                            <div class="construction">
+                                <div class="construction__title">
+                                    <h1>CREATE<span class="orange">X</span> CONSTRUCTION</h1>
+                                </div>
+                                <div class="construction__text">
+                                    <p>Cras ultrices leo vitae non viverra. Fringilla nisi 
+                                        quisque consequat, dignissim vitae proin ipsum sed. 
+                                        Pellentesque nec turpis purus eget pellentesque integer 
+                                        ipsum elementum felis. 
+                                    </p>
+                                </div>
+                                <div class="construction__buttons">
+                                    <button type="button" class="transparent__button"><a href="about.html">LEARN MORE ABOUT US</a></button>
+                                    <button type="button" class="orange__button">SUBMIT REQUEST</button>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
-    
-                <ul class="slides">
-                    <li class="slides__item active"><span>01</span></li>
-                    <li class="slides__item"><span>02</span></li>
-                    <li class="slides__item"><span>03</span></li>
-                    <li class="slides__item"><span>04</span></li>
-                </ul>
+            </div>
+            <div class="slider__nav">
+                <label for="r1" class="bar"><span>01</span></label>
+                <label for="r2" class="bar"><span>02</span></label>
+                <label for="r3" class="bar"><span>03</span></label>
+                <label for="r4" class="bar"><span>04</span></label>
             </div>
         </section>
         <section class="construction__bureau">
