--- a/contacts.html
+++ b/contacts.html
@@ -102,12 +102,21 @@
                                 <div class="form__box">
                                     <label for="name">Preferred contact method</label>
                                     <div class="radio__box">
-                                        <input type="radio" id="phone__radio" name="phone__radio">
-                                        <label for="phone__radio">Phone</label>
-                                        <input type="radio" id="email__radio" name="email__radio">
-                                        <label for="name">Email</label>
-                                        <input type="radio" id="viber__radio" name="viber__radio">
-                                        <label for="name">Viber</label>
+                                        <label class="radio">
+                                            <input type="radio" id="phone__radio" name="contact__radio" value="phone">
+                                            Phone
+                                            <span></span>
+                                        </label>
+                                        <label class="radio">
+                                            <input type="radio" id="email__radio" name="contact__radio" value="email">
+                                            Email
+                                            <span></span>
+                                        </label>
+                                        <label class="radio">
+                                            <input type="radio" id="telegram__radio" name="contact__radio" value="telegram">
+                                            Telegram
+                                            <span></span>
+                                        </label>
                                     </div>
                                 </div>
                                 <div class="form__box">
