--- a/#source/supported_clients.html
+++ b/#source/supported_clients.html
@@ -1,20 +1,74 @@
 <div class="supported__content">
     <div class="supported__block">
         <h2 class="supported__title">What our clients are saying</h2>
-        <img src="img/main/profile-image.png" alt="profile photo">
-        <p class="supported__description">Ipsum aute sunt aliquip aute et occaecat. 
-            Anim minim do cillum eiusmod enim. Consectetur magna cillum consequat minim  
-            laboris cillum laboris voluptate minim proident exercitation ullamco. 
-        </p>
-        <div class="supported__switch">
-            <div class="supported__name">
-                <h5>Shawn Edwards</h5>
-                <p>Position, Company name</p>
+
+        <div class="clients__slider">
+            <div class="clients__slides">
+                <input type="radio" name="clients__r" id="clients__r1" checked>
+                <input type="radio" name="clients__r" id="clients__r2" >
+                <input type="radio" name="clients__r" id="clients__r3" >
+                <input type="radio" name="clients__r" id="clients__r4" >
+
+                <div class="clients__slide s1">
+                    <img src="img/main/profile-image.png" alt="profile photo">
+                    <p class="supported__description">Ipsum aute sunt aliquip aute et occaecat. 
+                        Anim minim do cillum eiusmod enim. Consectetur magna cillum consequat minim  
+                        laboris cillum laboris voluptate minim proident exercitation ullamco. 
+                    </p>
+                    <div class="supported__switch">
+                        <div class="supported__name">
+                            <h5>Shawn Edwards</h5>
+                            <p>Position, Company name</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="clients__slide">
+                    <img src="img/main/profile-image.png" alt="profile photo">
+                    <p class="supported__description">Ipsum aute sunt aliquip aute et occaecat. 
+                        Anim minim do cillum eiusmod enim. Consectetur magna cillum consequat minim  
+                        laboris cillum laboris voluptate minim proident exercitation ullamco. 
+                    </p>
+                    <div class="supported__switch">
+                        <div class="supported__name">
+                            <h5>Shawn Edwards</h5>
+                            <p>Position, Company name</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="clients__slide">
+                    <img src="img/main/profile-image.png" alt="profile photo">
+                    <p class="supported__description">Ipsum aute sunt aliquip aute et occaecat. 
+                        Anim minim do cillum eiusmod enim. Consectetur magna cillum consequat minim  
+                        laboris cillum laboris voluptate minim proident exercitation ullamco. 
+                    </p>
+                    <div class="supported__switch">
+                        <div class="supported__name">
+                            <h5>Shawn Edwards</h5>
+                            <p>Position, Company name</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="clients__slide">
+                    <img src="img/main/profile-image.png" alt="profile photo">
+                    <p class="supported__description">Ipsum aute sunt aliquip aute et occaecat. 
+                        Anim minim do cillum eiusmod enim. Consectetur magna cillum consequat minim  
+                        laboris cillum laboris voluptate minim proident exercitation ullamco. 
+                    </p>
+                    <div class="supported__switch">
+                        <div class="supported__name">
+                            <h5>Shawn Edwards</h5>
+                            <p>Position, Company name</p>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="supported__arrows">
-                <img src="img/main/prev-btn.png" alt="left arrow">
-                <img src="img/main/hover.png" alt="right arrow">
-            </div>
+        </div>
+        <div class="supported__arrows">
+            <img id="clients__arrow-left" src="img/main/prev-btn.png" alt="left arrow">
+            <img id="clients__arrow-right" src="img/main/hover.png" alt="right arrow">
         </div>
     </div>
     <img class="shift__img" src="img/main/builders.jpg" alt="builders image">
